fix anchor link

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -979,7 +979,7 @@ margin-left: 38px;
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
-		<p>To be eligible for this exemption, you must file the election in <a href=#part-3">Part 3</a>, Section 2 or 3.</p>
+		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
 		<details>
 			<summary>Primary place of residence</summary>
 			<p>This part applies to situations where a dwelling unit that is part of the residential property is occupied by an owner or certain members of the owner's family.</p>
@@ -990,7 +990,7 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
-		<p>To be eligible for this exemption, you must file the election in <a href=#part-3">Part 3</a>, Section 2 or 3.</p>
+		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
 		<details>
 			
 			<summary>Qualifying occupancy</summary>
