--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1007,7 +1007,7 @@ margin-left: 38px;
 
 	
 		<li><h3>Part 6 - Other exemptions</h3>
-<p>Complete this part if your ownership of the residential property is exempt for reasons other than primary place of residence or qualifying occupancy.</p>
+<p>Complete this part if your ownership of the residential property is exempt for reasons <strong>other than</strong> primary place of residence or qualifying occupancy.</p>
 </li>
 
 
@@ -1015,10 +1015,10 @@ margin-left: 38px;
 	<li><h3 id="FMV-election">Part 7 - Fair market value (FMV) election</h3>
 		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <a href="#taxable-value">taxable value</a>.</p> 
 		<details>
-			<summary>Fair market value</summary>
+			<summary>Fair market value (FMV)</summary>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-	          [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
+	     
 
 <details>
 	<summary>Acceptable Professional Associations and Designations</summary>
@@ -1035,6 +1035,10 @@ margin-left: 38px;
 <p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
 	
 </details>
+     <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883">Calculating the tax payable using the FMV</a>] </p>
+
+
+			
 	</details>
 		
 		</li>
