--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -944,7 +944,7 @@ margin-left: 38px;
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
 				<p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>no</strong> for line 310.</p>
-			<p>Line 315: By answering yes, you are electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+			<p><strong>Line 315</strong>: By answering yes, you are electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
 <p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 		</details>
 
@@ -952,7 +952,7 @@ margin-left: 38px;
 		<details>
 			<summary>Section 3 – Joint election to designate a residential property</summary>
 		<p>Complete this section if you answered <strong>yes</strong> for line 310.</p>
-			<p>Line 320: By answering yes, you are electing that both you and your spouse or common-law partner, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
+			<p><strong>Line 320</strong>: By answering yes, you are electing that both you and your spouse or common-law partner, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
 <p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 
 			
