--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1032,10 +1032,10 @@ margin-left: 38px;
 		<li>Ordre des évaluateurs agréés du Québec (OEAQ)</li>
 		<ul><li>Chartered Appraiser (C.App./É.A.)</li></ul>
 	</ul>
-<p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
+<p class="mrgn-tp-md">If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
 	
 </details>
-     <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883">Calculating the tax payable using the FMV</a>] </p>
+     <p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883">Calculating the tax payable using the FMV</a>] </p>
 
 
 			
