--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1477,14 +1477,22 @@
 
             </details> 
 			</li>
-			<li class="code-num">
-            <details>            <summary id="cd_34">Code 34&nbsp;– Personal use of employer's automobile or motor vehicle</summary> 
-            <p>Enter code 34 and report the amount of the taxable benefit if you provided an employee with the use of an automobile or motor vehicle.</p>
-            <p>You also need to report this amount in box 14.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
-            </details> 
+	
+<li class="code-num"><details> <summary id="cd_34">Code 34 – Personal use of employer's automobile or motor vehicle <span class="label label-info">Jeremiah</span></summary> 
+  <p>Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Allowances or reimbursements provided to an employee for the use of their own vehicle </dt>
+<dd><strong>Do not </strong>report using code 34 if you provided an allowance or a reimbursement to your employee to compensate for use of their automobile or motor vehicle, use <a href="#cd_40">code 40</a>.
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</a></p>
+</dd>
+</dl>      
+     <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a> or <a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html">Motor vehicle provided by the employer</a></p>
+               </details> 
 			</li>
-			<li class="code-num">
+
+
+	<li class="code-num">
             <details>
             <summary id="cd_36">Code 36&nbsp;– <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans</summary> 
             <p>If you provided an employee with an interest-free or low-interest loan, including a home-purchase and home-relocation loan, because of an office or employment (or intended employment), enter code 36 and the corresponding taxable benefit. </p>
