--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -774,7 +774,7 @@ html:lang(fr) .cnjnctn-or:before {
         <p>You are an <strong>affected owner</strong> of the residential property</p>
       </li>
     </ul>
-    <details>
+    <details class="mrgn-tp-md">
       <summary>What is a residential property</summary>
       <p>Generally, residential property is defined as property that is either of the following:</p>
       <ul>
