--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1430,9 +1430,8 @@
 </li>
 	
 <h4>Other information</h4>		
-      <li class="code-num">
-            <details>
-            <summary id="cd_30">Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
+ 
+ <li class="code-num"><details><summary id="cd_30">Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
             <p>Report the total amount of the board and lodging paid your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1442,39 +1441,30 @@
 </dd>
 </dl>
      <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
-                
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_31">Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
+
+<li class="code-num"><details><summary id="cd_31">Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
         <p >Report tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
  <p><strong>Do not </strong>report the <strong>tax-exempt </strong>benefit using box 14 or code 30.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
-
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
-           <p>Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
 
+<li class="code-num"><details><summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
+          <p>Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Medical travel assistance </dt>
 <dd>Report the total amount of the medical travel benefit using code 32 <strong>and</strong> <a href="#cd_33">code 33</a> for the medical portion only.</dd>
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
-
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_33">Code 33 – Medical travel assistance <span class="label label-success">Good</span></summary> 
+
+<li class="code-num"><details><summary id="cd_33">Code 33 – Medical travel assistance <span class="label label-success">Good</span></summary> 
             <p>Report the amount of the <strong>medical travel portion only</strong> you paid to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total amount of the travel benefit using <a href="#cd_32">code 32</a>.</p>
-
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
-
             </details> 
 			</li>
 	
@@ -1484,33 +1474,39 @@
 <dl class="dl-horizontal">
 <dt>Allowances or reimbursements provided to an employee for the use of their own vehicle </dt>
 <dd><strong>Do not </strong>report using code 34 if you provided an allowance or a reimbursement to your employee to compensate for use of their automobile or motor vehicle, use <a href="#cd_40">code 40</a>.
- <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</a></p>
 </dd>
 </dl>      
-     <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a> or <a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html">Motor vehicle provided by the employer</a></p>
-               </details> 
-			</li>
+     <p>Learn more:</p>
+<ul>
+<li><a href="/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a> </li>
+<li><a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html">Motor vehicle provided by the employer</a></li>
+<li><a href="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</a></li>
+</ul>
+</details> 
+</li>
 
 
-	<li class="code-num">
-            <details>
-            <summary id="cd_36">Code 36&nbsp;– <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans</summary> 
-            <p>If you provided an employee with an interest-free or low-interest loan, including a home-purchase and home-relocation loan, because of an office or employment (or intended employment), enter code 36 and the corresponding taxable benefit. </p>
-           <p>You also need to report this amount in box 14.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
-            </details> 
-			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_38">Code 38&nbsp;– Security options benefits</summary> 
+<li class="code-num"><details> <summary id="cd_36">Code 36 – <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans <span class="label label-info">Jeremiah</span></summary> 
+<p>Report the value of the interest-free and low interest benefit you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Allowances or reimbursements provided to an employee for the use of their own vehicle </dt>
+<dd><strong>Do not </strong>report using code 36 if you paid interest which has not been reimbursed in the year, use <a href="#cd_40">code 40</a>.
+</dd>
+</dl>   
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
+</details> 
+</li>
+
+
+<li class="code-num"><details> <summary id="cd_38">Code 38&nbsp;– Security options benefits</summary> 
             <p>If an employee received a taxable benefit under a corporation's agreement to issue its eligible shares or units of mutual fund trusts to the employee, enter code 38 and the corresponding amount. </p>
             <p>You also need to report this amount in box 14.</p>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_39">Code 39&nbsp;– Security options deduction&nbsp;– 110(1)(d)</summary> 
+
+<li class="code-num"><details><summary id="cd_39">Code 39&nbsp;– Security options deduction&nbsp;– 110(1)(d)</summary> 
             <p>If the employee is entitled to a deduction under paragraph 110(1)(d) of the Income Tax Act, enter code 39 and the amount of the deduction to which they are eligible. </p>
             <p><strong>Do not </strong>report this amount in box 14. </p>
             <h5>Options granted on or after July 1, 2021 and you are not a Canadian-controlled private corporation (CCPC) with revenues of more than $500 million. </h5>
