--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1490,8 +1490,8 @@
 <p>Report the value of the interest-free and low interest benefit you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Allowances or reimbursements provided to an employee for the use of their own vehicle </dt>
-<dd><strong>Do not </strong>report using code 36 if you paid interest which has not been reimbursed in the year, use <a href="#cd_40">code 40</a>.
+<dt>Benefit not reimbursed for forgiven/repayable awards</dt>
+<dd><strong>Do not </strong>report using code 36 if you paid interest on the benefit and your employee did not reimburse you in the year, use <a href="#cd_40">code 40</a>.
 </dd>
 </dl>   
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
@@ -1499,11 +1499,21 @@
 </li>
 
 
-<li class="code-num"><details> <summary id="cd_38">Code 38&nbsp;– Security options benefits</summary> 
-            <p>If an employee received a taxable benefit under a corporation's agreement to issue its eligible shares or units of mutual fund trusts to the employee, enter code 38 and the corresponding amount. </p>
-            <p>You also need to report this amount in box 14.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
-            </details> 
+<li class="code-num"><details> <summary id="cd_38">Code 38 – Security options benefits</summary> 
+<p>Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Title</dt>
+<dd>Description</dd>
+<dt>Title</dt>
+<dd>Description</dd>
+<dt>Title</dt>
+<dd>Description</dd>
+<dt>Title</dt>
+<dd>Description</dd>
+</dl>   
+  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
+  </details> 
 			</li>
 
 <li class="code-num"><details><summary id="cd_39">Code 39&nbsp;– Security options deduction&nbsp;– 110(1)(d)</summary> 
