--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -774,8 +774,8 @@ html:lang(fr) .cnjnctn-or:before {
         <p>You are an <strong>affected owner</strong> of the residential property</p>
       </li>
     </ul>
-    <details class="mrgn-tp-lg">
-      <summary>What is a residential property</summary>
+    <details>
+      <summary class="mrgn-tp-md">What is a residential property</summary>
       <p>Generally, residential property is defined as property that is either of the following:</p>
       <ul>
         <li>A detached house or similar building that contains a maximum of 3 dwelling units, including the related land</li>
