--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -816,7 +816,22 @@ margin-left: 38px;
 
 <h3>Penalties for failing to file the return on time</h3>
       <p>There are significant penalties if you do not send your return and pay an amount you owe when it is due.</p>
-<p>CHART</p>
+
+		 <table class="table table-bordered">
+<caption class="wb-inv">Caption text</caption>
+  <thead>Content</thead>
+  <tbody>Content</tbody>
+</table>
+
+
+
+
+
+
+
+
+
+		 
 		 <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn3/filing-return-paying-underused-housing-tax.html#_Toc121913351">Penalties for failing to file a return</a>.</p>
 		 
 		 <p>You will also have to pay interest on any amounts you owe.</p>
