--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1507,6 +1507,8 @@
 <dd>Also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
 <dt> Security options deduction under 110(1)(d.1)</dt>
 <dd>Also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
+<dt> Employer makes election under 110(1.1)</dt>
+<dd>Also report the amount of the taxable benefit if you chose not to claim the cash-out as an expense and you made an election under 110(1.1) using <a href="#cd_86">code 86</a></dd>
 
 </dl>   
   <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
