--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1504,40 +1504,38 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
-<dd>Also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01), also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_39">code 39</a></dd>
 <dt> Security options deduction under 110(1)(d.1)</dt>
-<dd>Also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d.1), also report 50% of the amount of the taxable benefit received from qualified securities using <a href="#cd_41">code 41</a></dd>
 <dt> Employer makes election under 110(1.1)</dt>
-<dd>Also report the amount of the taxable benefit if you chose not to claim the cash-out as an expense and you made an election under 110(1.1) using <a href="#cd_86">code 86</a></dd>
-
+<dd>If your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to  not claim the cash-out as an expense, also report the amount of the taxable benefit using <a href="#cd_86">code 86</a></dd>
 </dl>   
   <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
   </details> 
 			</li>
 
-<li class="code-num"><details><summary id="cd_39">Code 39&nbsp;– Security options deduction&nbsp;– 110(1)(d)</summary> 
-            <p>If the employee is entitled to a deduction under paragraph 110(1)(d) of the Income Tax Act, enter code 39 and the amount of the deduction to which they are eligible. </p>
-            <p><strong>Do not </strong>report this amount in box 14. </p>
-            <h5>Options granted on or after July 1, 2021 and you are not a Canadian-controlled private corporation (CCPC) with revenues of more than $500 million. </h5>
-            <p>If the employee received a taxable benefit in this situation, only include one half of the taxable benefits received from <strong>qualified </strong>security options. <strong>Do not </strong>include taxable benefits realized from security options you reported on Form T2-SCH 59, Information Return for Non-Qualified Securities (2021 and later tax years).</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
-            </details> 
+<li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d)</summary> 
+<p id="cd_39">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+ <p><strong>Do not </strong>report this amount in box 14. </p>
+  </details> 
 			</li>
+
+
 			<li class="code-num">
             <details>
-            <summary id="cd_40">Code 40&nbsp;– Other taxable allowances and benefits</summary> 
-            <p>If you provided an employee with taxable allowances or benefits that you did not include elsewhere on the T4 slip, enter code 40 and the corresponding amount. </p>
+            <summary >Code 40&nbsp;– Other taxable allowances and benefits</summary> 
+            <p id="cd_40">If you provided an employee with taxable allowances or benefits that you did not include elsewhere on the T4 slip, enter code 40 and the corresponding amount. </p>
             <p>You also need to report this amount in box 14.</p>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary >Code 41 – Security options deduction&nbsp;– 110(1)(d.1)</summary> 
-            <p id="cd_41">If the employee is entitled to a deduction under paragraph 110(1)(d.1) of the Income Tax Act (for shares issued or sold by a Canadian-controlled private corporation), enter code 41 and one-half of the amount you reported under code 38 for those shares. </p>
-            <p><strong>Do not </strong>report this amount in box 14. </p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
-            </details> 
+
+<li class="code-num">
+<details><summary>Code 41 – Security options deduction – 110(1)(d.1)</summary> 
+<p id="cd_41">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+           <p><strong>Do not </strong>report this amount in box 14. </p>
+
+  </details> 
 			</li>
 
 <li class="code-num"><details><summary>Code 42 – Employment commissions <span class="label label-success">Good</span></summary> 
@@ -1718,7 +1716,8 @@
             <summary id="cd_86">Code 86&nbsp;– Security options election</summary> 
             <p>If you elected not to claim the security option cash-outs as an expense, enter code 86 and the corresponding amount. </p>
             <p>You also need to report this amount in box 38.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Security options</a></p>
+   <p><strong>Do not </strong>report this amount in box 14. </p>
+            
             </details> 
 			</li>
 			<li class="code-num">
