--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1499,7 +1499,7 @@
 </li>
 
 
-<li class="code-num"><details> <summary id="cd_38">Code 38 – Security options benefits</summary> 
+<li class="code-num"><details> <summary id="cd_38">Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
 <p>Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1514,7 +1514,7 @@
   </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d)</summary> 
+<li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_39">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
  <p><strong>Do not </strong>report this amount in box 14. </p>
   </details> 
@@ -1531,7 +1531,7 @@
 			</li>
 
 <li class="code-num">
-<details><summary>Code 41 – Security options deduction – 110(1)(d.1)</summary> 
+<details><summary>Code 41 – Security options deduction – 110(1)(d.1) <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_41">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
            <p><strong>Do not </strong>report this amount in box 14. </p>
 
@@ -1711,21 +1711,18 @@
 		    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Premium paid to private health services plan (PHSP)</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_86">Code 86&nbsp;– Security options election</summary> 
-            <p>If you elected not to claim the security option cash-outs as an expense, enter code 86 and the corresponding amount. </p>
-            <p>You also need to report this amount in box 38.</p>
+
+<li class="code-num">
+<details><summary>Code 86 – Security options election <span class="label label-info">Jeremiah</span></summary> 
+            <p id="cd_86">Report the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to not claim the cash-out as an expense using code 86. If you report an amount in code 86, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
    <p><strong>Do not </strong>report this amount in box 14. </p>
-            
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_87">Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
-	<p>Report tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
-<p><strong>Do not </strong>report this amount in box 14.</p>
 
+<li class="code-num">
+<details><summary>Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
+	<p id="cd_87">Report tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
@@ -1733,29 +1730,27 @@
 <dt>Other than volunteer</dt>
 <dd><strong>Do not </strong>report the employment income if the individual other than as a volunteer has the same or similar duties using code 87, use <a href="#bx_14">box 14</a>.  </dd>
 </dl>
-
-	     
-
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_88">Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
-            <p>Report tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
+
+<li class="code-num">
+<details><summary>Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
+ <p id="cd_88">Report tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>If you pay taxable or partly tax-exempt self-employment income, you must report using code 88 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
-
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
-
             </details> 
 			</li>
+
 			</ul>
             </section>
+
+
             <section id="self1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
             <div class="modal-body">
