--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1444,12 +1444,14 @@
             </details> 
 			</li>
 
+
 <li class="code-num"><details><summary id="cd_31">Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
         <p >Report tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
  <p><strong>Do not </strong>report the <strong>tax-exempt </strong>benefit using box 14 or code 30.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
+
 
 <li class="code-num"><details><summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-success">Good</span></summary> 
           <p>Report the total amount of the travel benefit paid to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
@@ -1468,6 +1470,7 @@
             </details> 
 			</li>
 	
+
 <li class="code-num"><details> <summary id="cd_34">Code 34 – Personal use of employer's automobile or motor vehicle <span class="label label-info">Jeremiah</span></summary> 
   <p>Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <h4>Specific situation</h4>
@@ -1514,45 +1517,40 @@
   </details> 
 			</li>
 
+
 <li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_39">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
  <p><strong>Do not </strong>report this amount in box 14. </p>
   </details> 
 			</li>
 
-
-			<li class="code-num">
-            <details>
-            <summary >Code 40&nbsp;– Other taxable allowances and benefits</summary> 
-            <p id="cd_40">If you provided an employee with taxable allowances or benefits that you did not include elsewhere on the T4 slip, enter code 40 and the corresponding amount. </p>
-            <p>You also need to report this amount in box 14.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+<li class="code-num"><details><summary >Code 40 – Other taxable allowances and benefits <span class="label label-info">Jeremiah</span></summary> 
+<p id="cd_40">Report the value of the taxable benefit you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14">box 14</a> if the amount is <strong>not</strong> reported in other codes of the T4 slip.  </p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 41 – Security options deduction – 110(1)(d.1) <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 41 – Security options deduction – 110(1)(d.1) <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_41">Report 50% of the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
            <p><strong>Do not </strong>report this amount in box 14. </p>
-
   </details> 
-			</li>
+		</li>
 
 <li class="code-num"><details><summary>Code 42 – Employment commissions <span class="label label-success">Good</span></summary> 
-            <p  id="cd_42">Report amounts of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+<p  id="cd_42">Report amounts of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
             </details> 
 			</li>
 
-<li class="code-num"><details><summary id="cd_43">Code 43 – Canadian Armed Forces personnel and police deduction <span class="label label-success">Good</span></summary> 
-<p>Report employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+<li class="code-num"><details><summary>Code 43 – Canadian Armed Forces personnel and police deduction <span class="label label-success">Good</span></summary> 
+<p id="cd_43">Report employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <p>For 2017 and subsequent taxation years, Canadian Armed Forces personnel and police officers deployed outside Canada can claim a deduction from net income for the amount of employment earnings <strong>they receive while serving on international operational missions </strong>as determined by the Minister of National Defence or by a person designated by that Minister. This is the case regardless of the risk associated with the mission. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-24400-canadian-forces-personnel-police-deduction.html">Canadian Armed Forces personnel and police deduction</a></p> 
             </details> 
 			</li>
 
-<li class="code-num"><details><summary id="cd_57-60">Codes 57 to 60  <span class="label label-danger">Jeremiah, are we deleting these instructions</span></summary> 
-            <p>For the 2020 tax year <strong> only </strong>, additional reporting requirements will apply to all employers, and will help the CRA validate payments under the Canada Emergency Wage Subsidy (CEWS), the Canada Emergency Response Benefit (CERB), and the Canada Emergency Student Benefit (CESB).</p> 
+<li class="code-num"><details><summary>Codes 57 to 60  <span class="label label-danger">Jeremiah, are we deleting these instructions</span></summary> 
+ <p  id="cd_57-60">For the 2020 tax year <strong> only </strong>, additional reporting requirements will apply to all employers, and will help the CRA validate payments under the Canada Emergency Wage Subsidy (CEWS), the Canada Emergency Response Benefit (CERB), and the Canada Emergency Student Benefit (CESB).</p> 
             <p>In addition to reporting employment income in Box 14 or Code 71, use new "Other information" codes when reporting employment income and retroactive payments in the following periods:</p>
             <ul>
             <li>Code 57 – Employment Income – March 15 to May 9, 2020</li>
@@ -1567,7 +1565,7 @@
 </li>
 		
 <li class="code-num"><details><summary>Code 66 – Eligible retiring allowances <span class="label label-success">Good</span></summary> 
-            <p  id="cd_66">Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
+<p  id="cd_66">Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1576,14 +1574,12 @@
 <dt>Non-eligible retiring allowances </dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances using code 66, use <a href="#cd_67">code 67</a>.</dd>
 </dl>
-
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/retire-allowance.html">Payments of retiring allowances</a></p>
             </details> 
 			</li>
 
-			<li class="code-num">
-<details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances <span class="label label-success">Good</span></summary> 
-             <p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
+<li class="code-num"><details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances <span class="label label-success">Good</span></summary> 
+<p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1596,9 +1592,8 @@
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
-            <p id="cd_69">Report tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
+<li class="code-num"><details><summary>Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
+ <p id="cd_69">Report tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1607,13 +1602,11 @@
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
-
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 71 – Indian (exempt income) – Employment <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num"><details><summary>Code 71 – Indian (exempt income) – Employment <span class="label label-info">Jeremiah</span></summary>
        <p id="cd_71">Report tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
@@ -1621,25 +1614,21 @@
 <dt>Taxable or partly tax-exempt income <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>If you pay taxable or partly tax-exempt employment income, you must report using code 71 <strong>and</strong> <a href="#bx_14">box 14</a>.</dd>
 </dl>
-
-          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 74 – Past service contributions for 1989 or earlier years while a contributor <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 74 – Past service contributions for 1989 or earlier years while a contributor <span class="label label-info">Jeremiah</span></summary> 
  <p id="cd_74">Report amounts for past service contributions for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
-<li class="code-num">
- <details>  <summary>Code 75 – Past service contributions for 1989 or earlier years while not a contributor <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"> <details>  <summary>Code 75 – Past service contributions for 1989 or earlier years while not a contributor <span class="label label-info">Jeremiah</span></summary> 
           <p id="cd_75">Report amounts for past service contributions for 1989 or earlier years while the employee was not a contributor using code 75 <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
-<li class="code-num">
-   <details> <summary>Code 77&nbsp;– Workers' compensation benefits repaid to the employer</summary> 
+<li class="code-num"><details> <summary>Code 77 – Workers' compensation benefits repaid to the employer</summary> 
             <p id="cd_77">Report the amount of workers' compensation benefits repaid to the employer that was previously included in the employee's employment income (box 14 of the T4 slip). This allows an employee to claim a corresponding deduction as other employment expenses on their income tax and benefit returns. </p>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Workers' compensation claims</a></p>
             <h4>Ontario COVID-19 Worker Income Protection Benefit </h4>
@@ -1650,8 +1639,7 @@
             </details>
 </li>
 		
-<li class="code-num">			
-<details><summary >Code 78&nbsp;– Fishers&nbsp;– Gross income</summary> 
+<li class="code-num"><details><summary >Code 78 – Fishers&nbsp;– Gross income</summary> 
             <p id="cd_78">Enter code 78 and report the amount paid or payable to the fisher from the proceeds of a catch. </p>
             <p>You also need to report either the net partnership or owner amount using code 79 <strong>or </strong>the shareperson amount using code 80.</p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
