--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1656,19 +1656,17 @@
             <p>Learn more: <a href="#fish">Self-employed fishing income</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_80">Code 80&nbsp;– Fishers&nbsp;– Shareperson amount</summary> 
-            <p>Enter code 80 and the applicable amount if the fisher you are paying is a type 2 fisher.</p>
+
+<li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount</summary> 
+            <p id="cd_80">Enter code 80 and the applicable amount if the fisher you are paying is a type 2 fisher.</p>
             <p>Report the same amount that you reported in box 24 &ndash; EI insurable earnings (or in box 56 if the fisher in Quebec). </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
             <p>Learn more: <a href="#fish">Self-employed fishing income</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_81">Code 81&nbsp;– Placement or employment agency workers&nbsp;– Gross income</summary> 
-            <p>Enter code 81 in the Other information area and report the placement worker's gross earnings if:</p>
+	
+<li class="code-num"><details><summary>Code 81 – Placement or employment agency worker – Gross income</summary> 
+            <p id="cd_81">Enter code 81 in the Other information area and report the placement worker's gross earnings if:</p>
             <ul>
             <li>You are an agency's client </li>
             <li>The agency placed a worker under your direction and control </li>
@@ -1678,37 +1676,33 @@
             <p>Learn more: <a href="#agency">Placement or employment agency workers</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_82">Code 82&nbsp;– Taxi drivers and drivers of other <span class="nowrap">passenger-carrying</span> vehicles&nbsp;– Gross income</summary> 
-            <p>Report the amount of gross earnings of the worker using <strong>code 82 </strong>for taxi drivers and drivers of other passenger-carrying vehicles</p>
+
+<li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income</summary> 
+<p id="cd_82">Report the amount of gross earnings of the worker using <strong>code 82 </strong>for taxi drivers and drivers of other passenger-carrying vehicles</p>
+ <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
+            </details> 
+			</li>
+
+<li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income</summary> 
+<p id="cd_83">Report the amount of gross earnings of the worker using <strong>code 83 </strong>for barbers or hairdressers </p>
             <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
             </details> 
 			</li>
-			<li class="code-num">
-            <details>
-            <summary id="cd_83">Code 83&nbsp;– Barbers or hairdressers&nbsp;– Gross income</summary> 
-            <p>Report the amount of gross earnings of the worker using <strong>code 83 </strong>for barbers or hairdressers </p>
-            <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
-            </details> 
-			</li>
-			<li class="code-num">
-            <details><summary id="cd_85"><span class="nowrap">Code 85&nbsp;</span><span class="nowrap">– </span><span class="nowrap">Employee-paid </span>premiums for private health services plans</summary> 
-            <p>Enter code 85 and report the amounts that the <strong>employee paid</strong>. The use of code 85 is optional. However, if you do not use this code, the CRA may ask the employee to provide supporting documents.</p>
+
+<li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans</summary> 
+ <p id="cd_85">Enter code 85 and report the amounts that the <strong>employee paid</strong>. The use of code 85 is optional. However, if you do not use this code, the CRA may ask the employee to provide supporting documents.</p>
 		    <p>Employee-paid premiums to a private health services plan are considered qualifying medical expenses and can be claimed by the employee on their income tax and benefit return. </p>
 		    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Premium paid to private health services plan (PHSP)</a></p>
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 86 – Security options election <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 86 – Security options election <span class="label label-info">Jeremiah</span></summary> 
             <p id="cd_86">Report the amount of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to not claim the cash-out as an expense using code 86. If you report an amount in code 86, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
    <p><strong>Do not </strong>report this amount in box 14. </p>
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
 	<p id="cd_87">Report tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
@@ -1722,8 +1716,7 @@
             </details> 
 			</li>
 
-<li class="code-num">
-<details><summary>Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
  <p id="cd_88">Report tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
